[package]
name = "applier"
version = "0.2.1"
edition = "2021"
description = "A CLI for applying a command to directories within a directory"
repository = "https://github.com/Sapiet1/applier"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-std", "io-util", "sync"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"
