[package]
name = "subdo"
version = "0.4.0"
edition = "2024"
description = "A CLI for applying a command to directories within a directory"
repository = "https://github.com/Sapiet1/subdo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "std", "help", "usage", "error-context"]

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "macros",
    "rt",
    "process",
    "fs",
    "io-std",
    "io-util",
    "sync",
    "time",
]

[dependencies.tokio-stream]
version = "0.1"
default-features = false
features = ["fs"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.anyhow]
version = "1.0.96"
default-features = false
features = ["std"]

[dependencies.thiserror]
version = "2.0.11"
default-features = false
features = ["std"]

[dependencies.humantime]
version = "2.1.0"
default-features = false

[dependencies.num_cpus]
version = "1.16.0"

[dependencies.serde]
version = "1.0.218"
default-features = false
features = ["std", "derive"]
optional = true

[dependencies.serde_json]
version = "1.0.139"
default-features = false
features = ["std"]
optional = true

[features]
json = ["dep:serde", "dep:serde_json"]
